[metadata]
name = e2e.pom
version = 0.1.2
description = Human-friendly rich class-based modeling for the Page Object Model pattern
long_description = file: README.rst, CHANGES.rst, LICENSE
long_description_content_type = text/x-rst
url = https://github.com/nickroeker/e2e.pom
author = Nic Kroeker
license = Apache 2.0
keywords =
    e2e
    testing
    framework
    model
    selenium
    webdriver
    pom
    page
    object
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Acceptance

[options]
python_requires = >=3.6
include_package_data = true
zip_safe = false
packages = find_namespace:
namespace_packages =
    e2e
install_requires =
    selenium >= 3.0.0
    e2e.common
    typing_extensions
    waiter

[options.package_data]
e2e.pom =
    py.typed

[options.packages.find]
include = e2e.*

[options.extras_require]
dev =
    pep8-naming
    pylint
    black
    flake8
    tox
    pytest
    mypy
    setuptools>=40.6.0
    wheel
    zest.releaser[recommended]

[zest.releaser]
create-wheel = yes

[mypy]
strict=true
namespace_packages=true

[mypy-selenium.*]
ignore_missing_imports = True

[isort]
# [Google Python Style Guide]
force_single_line=true

# [Google Python Style Guide] Allow long imports
line_length=200

# Sometimes doesn't recognize the current package
known_first_party=e2e

# These often have a necessary import order within them
skip=
    __init__.py,
    conftest.py,

[flake8]
# Using pylint for length detection since it can ignore import lines
max-line-length=9999

ignore=
    # "First line should be in imperative mood", mostly annoying
    D401,
    # Ignore constructor docstrings, documenting on class instead
    D107,
    # black sometimes outputs lines which start with a binary operator, but wraps them appropriately.
    W503,

per-file-ignores =
    */__init__.py:F401,D104
